--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1269,6 +1269,22 @@ body.incassoos_page_incassoos-settings .wp-editor-wrap {
 	width: 600px;
 }
 
+body.incassoos_page_incassoos-settings .decrypt-option-value-wrapper {
+	display: inline-block;
+}
+
+body.incassoos_page_incassoos-settings .decrypt-option-value-wrapper input {
+	margin-right: -4px;
+	border-right: 0px;
+	border-start-end-radius: 0px;
+	border-end-end-radius: 0px;
+}
+
+body.incassoos_page_incassoos-settings .decrypt-option-value-wrapper .button {
+	border-start-start-radius: 0px;
+	border-end-start-radius: 0px;
+}
+
 /** Encryption Page **/
 
 body.incassoos_page_incassoos-encryption .encryption-form {
