--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1143,22 +1143,53 @@ body.incassoos_page_incassoos-consumers .import-export-consumers {
 	float: right;
 }
 
-body.incassoos_page_incassoos-consumers .export-consumers-wrapper {
-	display: inline-block;
+body.incassoos_page_incassoos-consumers .import-export-consumers .spinner {
+	float: left;
 }
 
-body.incassoos_page_incassoos-consumers .export-consumers-wrapper:not(.opened) input:first-of-type {
+body.incassoos_page_incassoos-consumers .require-decryption-key-wrapper,
+body.incassoos_page_incassoos-settings .require-decryption-key-wrapper {
+	display: inline-block;
+	vertical-align: top;
+}
+
+body.incassoos_page_incassoos-consumers .require-decryption-key-wrapper:not(.opened):before,
+body.incassoos_page_incassoos-settings .require-decryption-key-wrapper:not(.opened):before {
+	content: '\f112'; /* dashicons-admin-network */
+	font: normal 18px/1 dashicons;
+	display: inline-block;
+	vertical-align: top;
+	width: 32px;
+	height: 30px;
+	margin-right: -5px;
+	padding: 5px;
+	color: #0071a1;
+	border: 1px solid #0071a1;
+	background: #f3f5f6;
+	border-radius: 3px 0px 0px 3px;
+	box-sizing: border-box;
+}
+
+body.incassoos_page_incassoos-consumers .require-decryption-key-wrapper:not(.opened) input[type="submit"],
+body.incassoos_page_incassoos-settings .require-decryption-key-wrapper:not(.opened) .button {
+	border-radius: 0px 3px 3px 0px;
+}
+
+body.incassoos_page_incassoos-consumers .require-decryption-key-wrapper:not(.opened) input:first-of-type,
+body.incassoos_page_incassoos-settings .require-decryption-key-wrapper:not(.opened) input {
 	display: none;
 }
 
-body.incassoos_page_incassoos-consumers .export-consumers-wrapper input:first-of-type {
+body.incassoos_page_incassoos-consumers .require-decryption-key-wrapper input:first-of-type,
+body.incassoos_page_incassoos-settings .require-decryption-key-wrapper input {
 	margin-right: -4px;
 	border-right: 0px;
 	border-start-end-radius: 0px;
 	border-end-end-radius: 0px;
 }
 
-body.incassoos_page_incassoos-consumers .export-consumers-wrapper.opened .button {
+body.incassoos_page_incassoos-consumers .require-decryption-key-wrapper.opened .button,
+body.incassoos_page_incassoos-settings .require-decryption-key-wrapper.opened .button {
 	border-start-start-radius: 0px;
 	border-end-start-radius: 0px;
 }
@@ -1310,22 +1341,6 @@ body.incassoos_page_incassoos-consumers .inline-edit .submit {
 
 body.incassoos_page_incassoos-settings .wp-editor-wrap {
 	width: 600px;
-}
-
-body.incassoos_page_incassoos-settings .decrypt-option-value-wrapper {
-	display: inline-block;
-}
-
-body.incassoos_page_incassoos-settings .decrypt-option-value-wrapper input {
-	margin-right: -4px;
-	border-right: 0px;
-	border-start-end-radius: 0px;
-	border-end-end-radius: 0px;
-}
-
-body.incassoos_page_incassoos-settings .decrypt-option-value-wrapper .button {
-	border-start-start-radius: 0px;
-	border-end-start-radius: 0px;
 }
 
 /** Encryption Page **/
