Consumers: fix bug where the export action messed up the bulk action process

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1143,6 +1143,10 @@ body.incassoos_page_incassoos-consumers .import-export-consumers {
 	float: right;
 }
 
+body.incassoos_page_incassoos-consumers .bulk-editing .import-export-consumers {
+	display: none; /* hide import/export when bulk editing */
+}
+
 body.incassoos_page_incassoos-consumers .import-export-consumers .spinner {
 	float: left;
 }
