--- a/assets/app/src/modules/templates/occasions.html
+++ b/assets/app/src/modules/templates/occasions.html
@@ -20,7 +20,7 @@
 					v-l10n-title.Occasion.ActiveOccasion
 					v-l10n.Occasion.ActiveOccasion></span>
 				<button
-					v-if="!getMode"
+					v-if="!getMode && occasions.length"
 					class="mode-option"
 					@click="mode = 'get'"
 					:disabled="editMode || loadingMode"
