App: set `inert` attribute on the 'sections' container when a panel is active. This disables user interaction on the element.

--- a/assets/app/src/modules/templates/sections.html
+++ b/assets/app/src/modules/templates/sections.html
@@ -1,4 +1,4 @@
-<main id="sections">
+<main id="sections" v-if="$isLoaded" :inert="isPanelActive">
 	<section
 		id="consumers"
 		:class="{ 'is-active': isConsumersActive, 'is-not-active': ! isConsumersActive }">
