--- a/assets/app/src/modules/templates/product.html
+++ b/assets/app/src/modules/templates/product.html
@@ -10,7 +10,7 @@
 				<div class="detail-item product-title">
 					<span class="detail-label" v-l10n.Product.TitleLabel></span>
 					<span v-if="isViewing" class="detail-value">{{title}}</span>
-					<input v-if="!isViewing" type="text" :placeholder="'Product.TitlePlaceholder' | translate" class="detail-value" v-model="title" />
+					<input v-if="!isViewing" type="text" :placeholder="'Product.TitlePlaceholder' | translate" class="detail-value" v-model="title" v-focus />
 				</div>
 
 				<div class="detail-item product-category" v-if="haveProductCategories">
@@ -50,7 +50,7 @@
 	<div class="panel-footer" v-if-not-empty>
 		<button type="button" v-if="!isViewing && deletable" @click="maybeDelete" class="delete-action" v-l10n.Common.Delete></button>
 		<button type="button" v-if="!isViewing && untrashable" @click="untrash" class="untrash-action" v-l10n.Common.Untrash></button>
-		<button type="button" v-if="isViewing" @click="edit" class="edit-action" v-l10n.Common.Edit></button>
+		<button type="button" v-if="isViewing" @click="edit" class="edit-action" v-focus v-l10n.Common.Edit></button>
 		<button type="button" v-if="!isViewing" @click="cancel" class="cancel-action" v-l10n.Common.Cancel></button>
 		<button type="button" v-if="!isViewing" :disabled="!submittable" @click="update" class="update-action" v-l10n="submitLabel"></button>
 	</div>
