App: make receipt inert when it is not active

--- a/assets/app/src/modules/templates/receipt.html
+++ b/assets/app/src/modules/templates/receipt.html
@@ -1,4 +1,4 @@
-<div class="receipt item-list-wrapper" :class="{ 'is-active': isActive }">
+<div class="receipt item-list-wrapper" :class="{ 'is-active': isActive }" :inert="! isActive">
 	<close-button @click="cancel" class="receipt-close"></close-button>
 
 	<div class="receipt-total" :class="{ 'is-active': !! totalPrice }">
