App: introduce `$isReady` root property to indicate the IDLE state was entered for the first time. This prevents the glitch on application load when the login panel loads slightly later than the main section.

--- a/assets/app/src/modules/templates/sections.html
+++ b/assets/app/src/modules/templates/sections.html
@@ -1,4 +1,4 @@
-<main id="sections" v-if="$isLoaded" :inert="isPanelActive">
+<main id="sections" v-if="$isReady" :inert="isPanelActive">
 	<section
 		id="consumers"
 		:class="{ 'is-active': isConsumersActive, 'is-not-active': ! isConsumersActive }">
