--- a/assets/app/src/styles/generic.scss
+++ b/assets/app/src/styles/generic.scss
@@ -17,6 +17,12 @@ html {
 html,
 body {
 	height: 100%;
+	background: #f1f1f1;
+}
+
+body {
+	background: url('../images/loader.svg') center center no-repeat;
+	background-size: 40px;
 }
 
 h1, h2, h3, h4, h5, h6 {
