--- a/assets/app/src/styles/generic.scss
+++ b/assets/app/src/styles/generic.scss
@@ -155,7 +155,7 @@ button.dashicons-before {
 	display: var(--debug-display);
 	padding: 2px 5px;
 	color: var(--debug-color);
-	background: rgba(0, 0, 0, .1);
+	background: var(--debug-background);
 	border-radius: 2px;
 	pointer-events: none;
 }
