App: remove the `v-focus-group` directive untill it is implemented properly.

--- a/assets/app/src/modules/templates/consumers.html
+++ b/assets/app/src/modules/templates/consumers.html
@@ -19,7 +19,7 @@
 	</div>
 
 	<div class="item-list-body">
-		<ul class="item-list parent-item-list" v-focus-group="{ 'selector': 'button.select-item', forceUpdate: focusGroupKey }">
+		<ul class="item-list parent-item-list">
 			<li class="item consumer-types" v-if="!isSearching">
 				<span
 					v-if="allGroupsExpanded"
