--- a/assets/app/src/modules/templates/orders.html
+++ b/assets/app/src/modules/templates/orders.html
@@ -3,7 +3,7 @@
 		<h2 class="section-topic" v-l10n.Order.ListHeading></h2>
 	</div>
 	<div class="item-list-body">
-		<ul class="item-list" v-focus-group="{ 'selector': 'button.select-item', forceUpdate: focusGroupKey }">
+		<ul class="item-list">
 			<li v-if="isOccasionClosed" class="item no-items">
 				<span class="occasion-closed" v-l10n.Order.Error.OccasionClosed></span>
 			</li>
